Fix carousel scaling on mobile

--- a/assets/css/styles.scss
+++ b/assets/css/styles.scss
@@ -130,7 +130,6 @@ div.about {
 }
 
 .carousel-inner > .item > img, .carousel-inner > .item > a > img {
-  height: 500px;
   margin: 0 auto;
 }
 
